--- a/fe/src/pages/home/home.html
+++ b/fe/src/pages/home/home.html
@@ -47,5 +47,5 @@
       </ion-card-content>
     </ion-card>
   </ion-list>
-  <button ion-button full>Get Recommendations</button>
+  <button ion-button full (click)="getRecommendation()">Get Recommendations</button>
 </ion-content>
